blender 3.6.1 crashes on start with wayland #110627

Closed
opened 2023-07-30 13:13:52 +02:00 by Hussam Al-Tayeb · 4 comments

installed from official tarball, I get the following:
./blender --log "ghost.wl.*" --log-level 2
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=wl_drm, version=2, name=1)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wl_compositor, version=4, name=2)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wl_shm, version=1, name=3)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=zxdg_output_manager_v1, version=3, name=6)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wl_data_device_manager, version=3, name=7)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=zwp_primary_selection_device_manager_v1, version=1, name=8)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=gtk_primary_selection_device_manager, version=1, name=9)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=wl_subcompositor, version=1, name=10)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=xdg_wm_base, version=3, name=11)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=zxdg_shell_v6, version=1, name=12)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=wl_shell, version=1, name=13)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=gtk_shell1, version=3, name=14)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wp_viewporter, version=1, name=15)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=zwp_pointer_gestures_v1, version=1, name=16)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=zwp_tablet_manager_v2, version=1, name=17)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wl_seat, version=5, name=18)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=zwp_relative_pointer_manager_v1, version=1, name=19)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=zwp_pointer_constraints_v1, version=1, name=20)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=zxdg_exporter_v1, version=1, name=21)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=zxdg_importer_v1, version=1, name=22)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=zwp_linux_dmabuf_v1, version=3, name=23)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=zwp_keyboard_shortcuts_inhibit_manager_v1, version=1, name=24)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=zwp_text_input_manager_v3, version=1, name=25)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=gtk_text_input_manager, version=1, name=26)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=wl_eglstream_controller, version=1, name=28)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wl_output, version=2, name=30)
INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wl_output, version=2, name=31)
GHOST/Wayland: wl_registry@2: error 0: invalid version for global zwp_pointer_gestures_v1 (16): have 1, wanted 3
Writing: /tmp/blender.crash.txt
Segmentation fault (core dumped)

In the meantime, the 3.3.9 release works fine.

installed from official tarball, I get the following: ./blender --log "ghost.wl.*" --log-level 2 INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=wl_drm, version=2, name=1) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wl_compositor, version=4, name=2) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wl_shm, version=1, name=3) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=zxdg_output_manager_v1, version=3, name=6) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wl_data_device_manager, version=3, name=7) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=zwp_primary_selection_device_manager_v1, version=1, name=8) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=gtk_primary_selection_device_manager, version=1, name=9) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=wl_subcompositor, version=1, name=10) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=xdg_wm_base, version=3, name=11) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=zxdg_shell_v6, version=1, name=12) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=wl_shell, version=1, name=13) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=gtk_shell1, version=3, name=14) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wp_viewporter, version=1, name=15) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=zwp_pointer_gestures_v1, version=1, name=16) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=zwp_tablet_manager_v2, version=1, name=17) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wl_seat, version=5, name=18) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=zwp_relative_pointer_manager_v1, version=1, name=19) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=zwp_pointer_constraints_v1, version=1, name=20) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=zxdg_exporter_v1, version=1, name=21) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=zxdg_importer_v1, version=1, name=22) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=zwp_linux_dmabuf_v1, version=3, name=23) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=zwp_keyboard_shortcuts_inhibit_manager_v1, version=1, name=24) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=zwp_text_input_manager_v3, version=1, name=25) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=gtk_text_input_manager, version=1, name=26) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (skipped), (interface=wl_eglstream_controller, version=1, name=28) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wl_output, version=2, name=30) INFO (ghost.wl.handle.registry): intern/ghost/intern/GHOST_SystemWayland.cc:5402 global_handle_add: add (interface=wl_output, version=2, name=31) GHOST/Wayland: wl_registry@2: error 0: invalid version for global zwp_pointer_gestures_v1 (16): have 1, wanted 3 Writing: /tmp/blender.crash.txt Segmentation fault (core dumped) In the meantime, the 3.3.9 release works fine.
Hussam Al-Tayeb added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-07-30 13:13:53 +02:00
YimingWu added the
Interest: Wayland
label 2023-07-30 15:03:05 +02:00

Can you detail exactly which distribution, desktop environment, and wayland compositor you use (including their versions)?

Can you detail exactly which distribution, desktop environment, and wayland compositor you use (including their versions)?
Jesse Yurkovich added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-07-30 20:59:20 +02:00

Gnome 3.36 (mutter 3.36). This is an older arch linux snapshot but with up to date mesa.

A similar crash would happen on ubuntu 20.04.

Gnome 3.36 (mutter 3.36). This is an older arch linux snapshot but with up to date mesa. A similar crash would happen on ubuntu 20.04.

Thanks for that! @ideasman42 Any ideas here? It's unclear if the problem is the older zwp_pointer_gestures_v1 version or something that happens just after this point.

Thanks for that! @ideasman42 Any ideas here? It's unclear if the problem is the older `zwp_pointer_gestures_v1` version or something that happens just after this point.
Jesse Yurkovich added
Status
Needs Info from Developers
and removed
Status
Needs Information from User
labels 2023-07-30 21:06:11 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2023-07-31 15:02:21 +02:00

I gather 3.6.2 will include the fix? Thank you!

I gather 3.6.2 will include the fix? Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110627
There is no content yet.